WIP - OTEL support fix update